# ChughtaiDownloader

./: README.md
src/: JS_BACKUP.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backu.rs  main.rs  mainbackup.rs
