[package]
name = "chugtaidownloader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1.0"
error-chain = "0.12.4"
ftp = "3.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["blocking", "stream"] }
scraper = "0.19.0"
select = "0.6.0"
table-extract = "0.2.3"
tempfile = "3.10.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
ureq = "2.9.7"
html_parser = "0.7.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
